--- a/app/src/main/res/layout/change_password_frame.xml
+++ b/app/src/main/res/layout/change_password_frame.xml
@@ -29,7 +29,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Chapter IV"
+            android:text="Change Password"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold" />
@@ -48,13 +48,12 @@
         android:background="@drawable/bg_button"
         android:orientation="vertical">
 
-        <!-- Chain Force -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:text="Torque"
+            android:text="Old Password"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -77,21 +76,14 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Nm"
-                android:textSize="18sp"
-                android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Chain Velocity -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Motor Speed"
+            android:text="New Password"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -114,21 +106,14 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="km/h"
-                android:textSize="18sp"
-                android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Efficiency -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Motor Shaft Diameter"
+            android:text="Re-enter new password"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -155,49 +140,30 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="mm"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!-- Load Factor -->
-        <!-- const button set-->
-        <include
-            android:id="@+id/chap4_button_set"
-            layout="@layout/const_button_set"
-            android:layout_marginVertical="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-        <!-- const button set-->
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@id/calculateBox"
-        android:gravity="center"
-
-        >
-
         <LinearLayout
-            android:id="@+id/calculate"
-            android:layout_width="245dp"
-            android:layout_height="45dp"
-            android:background="@drawable/button_black_rounded"
-            android:gravity="center"
-
-            >
+            android:id="@+id/confirm_button"
+            android:layout_width="wrap_content"
+            android:paddingHorizontal="10dp"
+            android:layout_height="38dp"
+            android:layout_gravity="end"
+            android:background="@drawable/grey_bg_button"
+            android:layout_margin="20dp">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Calculate"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="Confirm"
+                android:textStyle="bold" />
 
-                />
         </LinearLayout>
+
     </LinearLayout>
+
 </RelativeLayout>
 
