--- a/app/src/main/res/layout/activity_chapter2.xml
+++ b/app/src/main/res/layout/activity_chapter2.xml
@@ -218,22 +218,12 @@
         </LinearLayout>
 
         <!-- const button set-->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <include
+            android:id="@+id/chap2_button_set"
+            layout="@layout/const_button_set"
+            android:layout_marginVertical="20dp"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="15dp">
-
-            <include
-                android:id="@+id/chap2_button_set"
-                layout="@layout/const_button_set"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="wrap_content" />
         <!-- const button set-->
     </LinearLayout>
 
