--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -15,20 +15,20 @@
 
         <ImageView
             android:id="@id/backing"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
             android:layout_width="50dp"
             android:layout_height="match_parent"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
             android:src="@drawable/arrow_back" />
 
         <TextView
             android:id="@+id/header_title"
-            android:paddingStart="0dp"
-            android:paddingEnd="40dp"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
+            android:paddingStart="0dp"
+            android:paddingEnd="40dp"
             android:text="User Information"
             android:textColor="@color/white"
             android:textSize="25sp"
@@ -49,9 +49,11 @@
 
         <!-- Profile Image (Placeholder) -->
         <ImageView
+            android:id="@+id/avatar"
             android:layout_width="120dp"
             android:layout_height="120dp"
             android:layout_marginEnd="16dp"
+            android:contentDescription="Avatar"
             android:src="@android:drawable/ic_menu_gallery" />
 
         <!-- Profile Details -->
@@ -76,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:text="ntta@gmail.com"
                 android:textColor="#666666"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <TextView
                 android:id="@+id/dob"
@@ -84,28 +86,36 @@
                 android:layout_height="wrap_content"
                 android:text="DOB: 20/1/2001"
                 android:textColor="#666666"
-                android:textSize="20sp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/gender"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="20dp"
+                    android:contentDescription="Gender"
                     android:src="@android:drawable/ic_menu_gallery" />
 
                 <TextView
+                    android:id="@+id/role"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/bg_button"
-                    android:padding="5dp"
+                    android:background="@drawable/student_badge_bg"
+                    android:paddingStart="15dp"
+                    android:paddingTop="4dp"
+                    android:paddingEnd="15dp"
+                    android:paddingBottom="4dp"
                     android:text="Student"
                     android:textColor="#666666"
-                    android:textSize="24sp" />
+                    android:textSize="24sp"
+                    android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
@@ -134,7 +144,7 @@
                 android:layout_height="wrap_content"
                 android:text="02"
                 android:textColor="@color/main_color"
-                android:textSize="35dp"
+                android:textSize="48sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -158,7 +168,7 @@
                 android:layout_height="wrap_content"
                 android:text="7.5"
                 android:textColor="@color/main_color"
-                android:textSize="35dp"
+                android:textSize="48sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -287,18 +297,18 @@
             android:id="@id/create_session_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:contentDescription="Home"
             android:padding="15dp"
-            android:layout_weight="1"
             android:src="@drawable/ic_home" />
 
         <ImageView
             android:id="@id/user_profile_frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:contentDescription="User"
             android:padding="10dp"
-            android:layout_weight="1"
             android:src="@drawable/ic_user" />
 
     </LinearLayout>
