Add final output frame + Modify structure name

--- a/app/src/main/res/layout/activity_chapter2.xml
+++ b/app/src/main/res/layout/activity_chapter2.xml
@@ -220,7 +220,7 @@
         <!-- const button set-->
         <include
             android:id="@+id/chap2_button_set"
-            layout="@layout/const_button_set"
+            layout="@layout/component_button_set"
             android:layout_marginVertical="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
