--- a/app/src/main/res/layout/activity_chapter3.xml
+++ b/app/src/main/res/layout/activity_chapter3.xml
@@ -156,7 +156,7 @@
         <!-- const button set-->
         <include
             android:id="@+id/chap3_button_set"
-            layout="@layout/const_button_set"
+            layout="@layout/component_button_set"
             android:layout_marginVertical="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
