--- a/app/src/main/res/layout/activity_chapter3result.xml
+++ b/app/src/main/res/layout/activity_chapter3result.xml
@@ -35,8 +35,7 @@
 
     </LinearLayout>
 
-    <!--    Box hiển thị kết quả-->
-
+    <!-- Result Box -->
     <LinearLayout
         android:id="@+id/calculateBox"
         android:layout_width="match_parent"
@@ -49,116 +48,119 @@
         android:background="@drawable/bg_button"
         android:orientation="vertical">
 
-        <!-- Chain Force -->
+        <!-- Force F -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="20dp"
-            android:text="Total Gear Ratio"
+            android:text="Tỷ số truyền tổng"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultUt"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!--        Esseintial Motor Power-->
+        <!-- Số vòng quay đĩa nhỏ nx -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Fast Stage Ratio"
+            android:text="Tỷ số truyền cấp nhanh (u1)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
             android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultU1"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="vòng/phút"
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <!--        Torque-->
+
+
+        <!-- Tỉ số truyền ux -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Slow Stage Ratio"
+            android:text="Tỉ số truyền cấp chậm (u2)"
             android:textSize="18sp"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="10dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="6dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="6dp"
             android:background="@drawable/grey_container"
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/resultU2"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:textColor="#449D00"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
 
+        <!-- Nút Show Equation và Recalculate -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -177,7 +179,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Show Equation"
+                    android:text="Hiển thị công thức"
                     android:textStyle="bold" />
             </LinearLayout>
 
@@ -196,40 +198,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:text="Recalculate"
+                    android:text="Tính lại"
                     android:textStyle="bold" />
             </LinearLayout>
-
         </LinearLayout>
-
     </LinearLayout>
 
+    <!-- Nút Save and Proceed -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@id/calculateBox"
-        android:gravity="center"
-
-        >
+        android:gravity="center">
 
         <LinearLayout
             android:id="@+id/save_data"
             android:layout_width="265dp"
             android:layout_height="45dp"
             android:background="@drawable/button_black_rounded"
-            android:gravity="center"
-
-            >
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Save and Proceed"
+                android:text="Lưu và Tiếp tục"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                android:textStyle="bold"
-
-                />
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
