--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,9 +72,7 @@
             android:layout_height="45dp"
             android:layout_marginTop="35dp"
             android:background="@drawable/button_black_rounded"
-            android:gravity="center"
-
-            >
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/sign_in_word"
@@ -83,9 +81,7 @@
                 android:text="Sign In"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                android:textStyle="bold"
-
-                />
+                android:textStyle="bold" />
         </LinearLayout>
 
         <!-- Sign Up Link -->
@@ -100,6 +96,16 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="italic" />
+
+        <!-- Progress Bar hiển thị khi gọi API -->
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:indeterminateTint="@android:color/white"
+            android:visibility="gone" />
 
     </LinearLayout>
 </ScrollView>
