--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -40,6 +40,16 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
+        <!-- Name -->
+        <EditText
+            android:id="@+id/account_name"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="25dp"
+            android:background="@drawable/edittext_rounded"
+            android:hint="@string/hint0"
+            android:paddingHorizontal="16dp" />
+
         <!-- Username -->
         <EditText
             android:id="@+id/username"
@@ -106,6 +116,16 @@
             android:textColor="@android:color/white"
             android:textSize="16sp"
             android:textStyle="italic" />
+
+        <!-- Progress Bar hiển thị khi gọi API -->
+        <ProgressBar
+            android:id="@id/progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:indeterminateTint="@android:color/white"
+            android:visibility="gone" />
 
     </LinearLayout>
 </RelativeLayout>
