--- a/app/src/main/res/layout/component_teacher_badge.xml
+++ b/app/src/main/res/layout/component_teacher_badge.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/stu_badge"
+    android:id="@+id/tea_badge"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:paddingStart="15dp"
