--- a/app/src/main/res/layout/activity_chapter5result.xml
+++ b/app/src/main/res/layout/activity_chapter5result.xml
@@ -49,13 +49,13 @@
         android:background="@drawable/bg_button"
         android:orientation="vertical">
 
-        <!-- Chain Force -->
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="20dp"
-            android:text="Conveyor Power"
+            android:text="Tải trọng trên băng tải"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -70,10 +70,12 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id = "@+id/result_Fbt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:text = ""
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -81,7 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kW"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -92,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:text="Conveyor Lifespan"
+            android:text="Công suất băng tải"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -107,10 +109,12 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id = "@+id/result_Pbt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:layout_weight="1"
+                android:text =""
                 android:textColor="#449D00"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -118,7 +122,44 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="kW"
+                android:text=""
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Tuổi thọ băng tải"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="6dp"
+            android:background="@drawable/grey_container"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id = "@+id/result_Lh"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="1"
+                android:text =""
+                android:textColor="#449D00"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
                 android:textSize="18sp"
                 android:textStyle="bold" />
         </LinearLayout>
